[package]
name = "spl-simplified"
description = "Simplified Version of the SPL Token."
version = "0.1.3"
authors = ["Chirag Jani"]
edition = "2021"
license = "Apache-2.0"
resolver = "1"
repository = "https://github.com/Chirag-Jani/spl-simplified.git"

[dependencies.anchor-lang]
version = "0.29.0"
features = ["derive"]

[dependencies.borsh]
version = ">=0.9, <0.11"
optional = true

[dependencies.mpl-token-metadata]
version = "3.1.0"
optional = true

[dependencies.solana-program]
version = "1.16"

[dependencies.spl-associated-token-account]
version = "2.2"
features = ["no-entrypoint"]
optional = true

[dependencies.spl-token]
version = "4"
features = ["no-entrypoint"]
optional = true

[features]
associated_token = ["spl-associated-token-account"]
default = ["associated_token", "mint", "token"]
devnet = []
governance = []
idl-build = ["anchor-lang/idl-build"]
metadata = ["mpl-token-metadata"]
mint = []
shmem = []
simplespl = []
stake = ["borsh"]
token = ["spl-token"]
